Use state parameter to encode the original visited URL and support fixed OIDC callback URL
Use OIDC state parameter which is later returned during the auth flow
to encode the original visited URL instead of using a cookie. Using
a cookie is unnecessary in this case and even causes race conditions if
multiple requests are made to a different OIDC-protected targets
at the same time.

Additionally, the previously-used cookie for this auth flow purpose
was named the same as the session cookie, which could even
effectively overwrite an existing valid session cookie.

This commit also implements support for fixed callback URI/URLs
as many public OIDC providers require admins to configure
a fixed return/callback URLs in advance for every client
to prevent abuse (e.g. by uploading a fake OIDC handler script
on a different URI using some unprotected uploader and stealing
tokens returned by the OIDC provider to this callback URL).

--- a/helm/appidentityandaccessadapter/templates/deployment.yaml
+++ b/helm/appidentityandaccessadapter/templates/deployment.yaml
@@ -30,6 +30,9 @@ spec:
             - "--level={{ .Values.logging.level }}"
             - "--hash-key={{ .Values.keys.hashKeySize }}"
             - "--block-key={{ .Values.keys.blockKeySize }}"
+            {{ if .Values.secureCookies }}
+            - "--secure-cookies"
+            {{ end }}
 
           imagePullPolicy: {{ .Values.image.pullPolicy}}
           ports:
